--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ google-resumable-media==2.4.0
 googleapis-common-protos==1.57.0
 grpcio==1.51.1
 grpcio-status==1.51.1
+gunicorn==20.0.4
 gviz-api==1.10.0
 httplib2==0.21.0
 idna==3.4
