--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "firebase": "^9.15.0",
+    "plotly.js-dist": "^2.16.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
