--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "plotly.js-dist": "^2.16.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
